--- a/Dev/dev.html
+++ b/Dev/dev.html
@@ -72,11 +72,9 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="#">Check back soon!</a></h3>
-								<p>Work in progress...</p>
-								<!-- <h3><a href="#">Comfy Cafe</a></h3>
-								<p>A fully responsive website for a new coffee shop that extends a warm welcome</p> -->
+								<a href="https://comfycafe.netlify.app/" class="image featured"><img src="images/Comfy-Cafe.png" alt="A screenshot of Comfy Cafe sample site" /></a>
+								<h3><a href="https://comfycafe.netlify.app/">Comfy Cafe</a></h3>
+								<p>A responsive coffee shop site that extends a warm welcome</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
