--- a/Dev/dev.html
+++ b/Dev/dev.html
@@ -36,7 +36,7 @@
 							<header>
 								<h1>Hi. I'm <strong>Jamaal Brown</strong>.</h1>
 							</header>
-							<p>A Software Engineer that solves real world problems with software solutions. Look around the site to see my work. Stay to see what we can build together.</p>
+							<p>A full-stack software engineer. Look around the site to see my work. Stay to see what we can build together.</p>
 							<a href="../index.html#work" class="button large scrolly">I need a website</a>
 							<a href="#work" class="button large scrolly">I need a developer</a>
 						</div>
@@ -93,7 +93,6 @@
 						</div>
 					</div>
 					<footer>
-						<p>Any of these of these catch your interest?</p>
 						<a href="#contact" class="button large scrolly">Get in touch with me</a>
 					</footer>
 				</div>
@@ -133,7 +132,6 @@
 						</div>
 					</div>
 					<footer>
-						<p>Like what you see?</p>
 						<a href="#contact" class="button large scrolly">Get in touch with me</a>
 					</footer>
 				</div>
@@ -145,9 +143,9 @@
 					<header>
 						<h2>My Story</h2>
 						<p>
-							I'm an electrical engineer that has decided to direct my engineering skills towards software. After taking some online programming courses I found myself excited to sit down and figure out a software solution to a problem. Today, I am a part of the 100Devs Agency where I continue to hone my software engineering skills. My love for technology and how it helps us improve is what drives me.
+							I'm an electrical engineer that has rediscovered my passion for tech and software. After taking some online programming courses I found myself excited to sit down and figure out a software solution to a problem. Today, I am a part of the 100Devs Agency where I continue to hone my software engineering skills. My fascination for technology and how it helps us improve is what drives me.
 							<br><br>
-							When I'm not working or coding, you can find me indulging in story-driven video games, working out, cooking, or enjoying movies and tv with friends and family. I'm also a big into coffee and tea enthusiast! Enjoying a cup of specialty coffee or tea while getting some work done or relaxing on a lazy sunday is my favorite way of doing things.
+							When I'm not coding, you can find me cooking, enjoying the outdoors, or enjoying movies, games, and tv with friends and family. I'm also a coffee and tea enthusiast! Enjoying a cup of specialty coffee or tea while getting some work done or relaxing on a lazy Sunday is my favorite way of doing things.
 						</p>
 					</header>
 					
@@ -177,15 +175,17 @@
 									<div class="col-12">
 										<textarea name="message" id="message" placeholder="Message"></textarea>
 									</div>
+
 									<div class="col-12">
-										<ul class="actions">
-											<li class="g-recaptcha" data-sitekey="6Lc53JkfAAAAAH6eO2VVaTTsh9-zmon-UnHl_ZXt"></li>
-										</ul>
+											<div class="bot-check actions">
+												<div class="g-recaptcha" data-sitekey="6Lc53JkfAAAAAH6eO2VVaTTsh9-zmon-UnHl_ZXt"></div>
+											</div>
 										<ul class="actions">
 											<li><input type="submit" value="Send Message" /></li>
 											<li><input type="reset" value="Clear Form" class="alt" /></li>
 										</ul>
 									</div>
+
 								</div>
 							</form>
 						</div>
