--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							<header>
 								<h1>Hi. I'm <strong>Jamaal Brown</strong>.</h1>
 							</header>
-							<p>A Software Engineer that solves real world problems with software solutions. Look around the site to see my work. Stay to see what we can build together.</p>
+							<p>A full-stack software engineer. Look around the site to see my work. Stay to see what we can build together.</p>
 							<a href="#work" class="button large scrolly">I need a website</a>
 							<a href="Dev/dev.html#work" class="button large scrolly">I need a developer</a>
 						</div>
@@ -48,12 +48,12 @@
 			<article id="purpose" class="wrapper style2">
 				<div class="container">
 					<header>
-						<h2>The Digital Age</h2>
+						<h2>A website as a tool, not a barrier</h2>
 						<p>
-							We are in a age where notoriety is gained online. Having a website is becoming more of a necessity. Furthermore, having a website that is accessible on phones is crucial as move to mobile era. When someone looks up your business, most of the time they will see if you have a website.
+							Website issues shouldn’t be a barrier to getting your product or service in people’s hands. These days notoriety is gained online and having a website is becoming a necessity. Furthermore, having a website that is accessible on phones is crucial as we become a smartphone society. 
 							<br>
 							<br>
-							I offer a chance for any small business or individual to increase their online presence. Whether it's creating a website from scratch or enhancing an existing website to make it accessible on a mobile device. Whatever it is you are providing, let's expand your reach by enhancing your online presence. 
+							My goal is to provide an opportunity to increase one’s online presence. Whether through creating a website from scratch or enhancing an existing website to make it accessible and responsive on different devices. Let’s turn your website into a tool for connecting people to the service or product you provide. 
 						</p>
 					</header>
 					<footer>
@@ -93,7 +93,6 @@
 						</div>
 					</div>
 					<footer>
-						<p>Any of these of these catch your interest?</p>
 						<a href="#contact" class="button large scrolly">Get in touch with me</a>
 					</footer>
 				</div>
@@ -133,7 +132,6 @@
 						</div>
 					</div>
 					<footer>
-						<p>Like what you see?</p>
 						<a href="#contact" class="button large scrolly">Get in touch with me</a>
 					</footer>
 				</div>
@@ -145,9 +143,9 @@
 					<header>
 						<h2>My Story</h2>
 						<p>
-							I'm an electrical engineer that has decided to direct my engineering skills towards software. After taking some online programming courses I found myself excited to sit down and figure out a software solution to a problem. Today, I am a part of the 100Devs Agency where I continue to hone my software engineering skills. My love for technology and how it helps us improve is what drives me.
+							I'm an electrical engineer that has rediscovered my passion for tech and software. After taking some online programming courses I found myself excited to sit down and figure out a software solution to a problem. Today, I am a part of the 100Devs Agency where I continue to hone my software engineering skills. My fascination for technology and how it helps us improve is what drives me.
 							<br><br>
-							When I'm not working or coding, you can find me indulging in story-driven video games, working out, cooking, or enjoying movies and tv with friends and family. I'm also a big into coffee and tea enthusiast! Enjoying a cup of specialty coffee or tea while getting some work done or relaxing on a lazy sunday is my favorite way of doing things.
+							When I'm not coding, you can find me cooking, enjoying the outdoors, or enjoying movies, games, and tv with friends and family. I'm also a coffee and tea enthusiast! Enjoying a cup of specialty coffee or tea while getting some work done or relaxing on a lazy Sunday is my favorite way of doing things.
 						</p>
 					</header>
 					
