Update info in backend technologies and other competencies

--- a/Dev/dev.html
+++ b/Dev/dev.html
@@ -72,16 +72,16 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://comfycafe.netlify.app/" class="image featured"><img src="images/Comfy-Cafe.png" alt="A screenshot of Comfy Cafe sample site" /></a>
+								<a href="https://comfycafe.netlify.app/" class="image featured"><img src="images/comfy-cafe.gif" alt="A screenshot of Comfy Cafe sample site" /></a>
 								<h3><a href="https://comfycafe.netlify.app/">Comfy Cafe</a></h3>
 								<p>A responsive coffee shop site that extends a warm welcome</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Check back soon!</a></h3>
-								<p>Work in progress...</p>
+								<a href="https://find-brewery.netlify.app/" class="image featured"><img src="images/brewery-project.gif" alt="" /></a>
+								<h3><a href="https://find-brewery.netlify.app/">Find-My-Brewery</a></h3>
+								<p>An application that allows the user to see breweries and their information from the selected state and city</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -116,7 +116,7 @@
 							<section class="box style1">
 								<span class="icon solid featured fa-database"></span>
 								<h3>Backend technologies</h3>
-								<p>OracleSQL and more coming soon</p>
+								<p>OracleSQL, Node.js, Express, EJS, MongoDB</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -126,7 +126,7 @@
 								<ul>
 									<li>Github</li>
 									<li>Remote Work and Team Collaboration Experience</li>
-									<li>More Coming Soon...</li>
+									<li>Heroku</li>
 								</ul>
 							</section>
 						</div>
