--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@
 							<section class="box style1">
 								<span class="icon solid featured fa-code"></span>
 								<h3>Front-end technologies</h3>
-								<p>HTML, CSS, Vanilla JavaScript</p>
+								<p>HTML, CSS, JavaScript</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon solid featured fa-database"></span>
 								<h3>Backend technologies</h3>
-								<p>OracleSQL and more coming soon</p>
+								<p>OracleSQL, Node.js, Express, EJS, MongoDB</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -126,7 +126,7 @@
 								<ul>
 									<li>Github</li>
 									<li>Remote Work and Team Collaboration Experience</li>
-									<li>More Coming Soon...</li>
+									<li>Heroku</li>
 								</ul>
 							</section>
 						</div>
