Add Word of Mouth to projects and scrum and react to skills

--- a/Dev/dev.html
+++ b/Dev/dev.html
@@ -80,15 +80,15 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="https://find-brewery.netlify.app/" class="image featured"><img src="images/brewery-project.gif" alt="" /></a>
-								<h3><a href="https://find-brewery.netlify.app/">Find-My-Brewery</a></h3>
+								<h3><a href="https://find-brewery.netlify.app/">Find My Brewery</a></h3>
 								<p>An application that allows the user to see breweries and their information from the selected state and city</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Check back soon!</a></h3>
-								<p>Work in progress...</p>
+								<a href="https://word-of-mouth-production.up.railway.app/" class="image featured"><img src="images/word-of-mouth.gif" alt="" /></a>
+								<h3><a href="https://word-of-mouth-production.up.railway.app/">Word of Mouth</a></h3>
+								<p>Full-stack app in which users can post reviews and share them with close-knit communities like families, friends, or coworkers</p>
 							</article>
 						</div>
 					</div>
