--- a/index.html
+++ b/index.html
@@ -80,15 +80,15 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="https://find-brewery.netlify.app/" class="image featured"><img src="images/brewery-project.gif" alt="" /></a>
-								<h3><a href="https://find-brewery.netlify.app/">Find-My-Brewery</a></h3>
+								<h3><a href="https://find-brewery.netlify.app/">Find My Brewery</a></h3>
 								<p>An application that allows the user to see breweries and their information from the selected state and city</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Check back soon!</a></h3>
-								<p>Work in progress...</p>
+								<a href="https://word-of-mouth-production.up.railway.app/" class="image featured"><img src="images/word-of-mouth.gif" alt="" /></a>
+								<h3><a href="https://word-of-mouth-production.up.railway.app/">Word of Mouth</a></h3>
+								<p>Full-stack app in which users can post reviews and share them with close-knit communities like families, friends, or coworkers</p>
 							</article>
 						</div>
 					</div>
@@ -109,7 +109,7 @@
 							<section class="box style1">
 								<span class="icon solid featured fa-code"></span>
 								<h3>Front-end technologies</h3>
-								<p>HTML, CSS, JavaScript</p>
+								<p>HTML, CSS, JavaScript, React</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -126,6 +126,7 @@
 								<ul>
 									<li>Github</li>
 									<li>Remote Work and Team Collaboration Experience</li>
+									<li>Scrum</li>
 									<li>Heroku</li>
 								</ul>
 							</section>
