Update word of mouth links. Add experience to other

--- a/Dev/dev.html
+++ b/Dev/dev.html
@@ -86,8 +86,8 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://word-of-mouth-production.up.railway.app/" class="image featured"><img src="images/word-of-mouth.gif" alt="" /></a>
-								<h3><a href="https://word-of-mouth-production.up.railway.app/">Word of Mouth</a></h3>
+								<a href="https://word-of-mouth-site.herokuapp.com/" class="image featured"><img src="images/word-of-mouth.gif" alt="" /></a>
+								<h3><a href="https://word-of-mouth-site.herokuapp.com/">Word of Mouth</a></h3>
 								<p>Full-stack app in which users can post reviews and share them with close-knit communities like families, friends, or coworkers</p>
 							</article>
 						</div>
@@ -109,7 +109,7 @@
 							<section class="box style1">
 								<span class="icon solid featured fa-code"></span>
 								<h3>Front-end technologies</h3>
-								<p>HTML, CSS, JavaScript</p>
+								<p>HTML, CSS, TailwindCSS, JavaScript, React</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -123,11 +123,7 @@
 							<section class="box style1">
 								<span class="icon brands featured fa-git-square"></span>
 								<h3>Other competencies</h3>
-								<ul>
-									<li>Github</li>
-									<li>Remote Work and Team Collaboration Experience</li>
-									<li>Heroku</li>
-								</ul>
+								<p>Github, Remote Work, Pair Programming, OOP, Algorithms, Data Structures</p>
 							</section>
 						</div>
 					</div>
