--- a/Dev/dev.html
+++ b/Dev/dev.html
@@ -86,8 +86,8 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://word-of-mouth-site.herokuapp.com/" class="image featured"><img src="images/word-of-mouth.gif" alt="" /></a>
-								<h3><a href="https://word-of-mouth-site.herokuapp.com/">Word of Mouth</a></h3>
+								<a href="https://word-of-mouth.up.railway.app/" class="image featured"><img src="images/word-of-mouth.gif" alt="" /></a>
+								<h3><a href="https://word-of-mouth.up.railway.app/">Word of Mouth</a></h3>
 								<p>Full-stack app in which users can post reviews and share them with close-knit communities like families, friends, or coworkers</p>
 							</article>
 						</div>
